--- a/app/src/main/res/layout/activity_details_list.xml
+++ b/app/src/main/res/layout/activity_details_list.xml
@@ -38,11 +38,91 @@
                 android:textSize="16sp" />
 
             <LinearLayout
+                android:id="@+id/llWhatsappVerification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:weightSum="1.5"
+                android:background="@drawable/button_bg"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight=".4"
+                    android:paddingTop="15dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="8dp"
+                    android:background="@color/colorGray"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="KYC Verification"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Submit Voter ID/Driving Licence/Passport/Aadhar"
+                        android:textSize="14sp"
+                        android:textColor="@color/gray"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.1"
+                    android:gravity="end"
+                    android:padding="15dp"
+                    android:background="@color/colorGray"
+                    >
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        app:cardBackgroundColor="@color/baseColor"
+                        app:cardCornerRadius="50dp"
+                        >
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_margin="2.5dp"
+                            app:cardBackgroundColor="@color/colorGray"
+                            app:cardCornerRadius="50dp"
+                            >
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/percentWP"
+                                android:gravity="center"
+                                android:textColor="@color/baseColor"
+                                android:textSize="20sp"
+                                android:text="0%"
+                                />
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/llPersonalDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="10dp"
                 android:weightSum="1.5"
                 android:background="@drawable/button_bg"
                 >
@@ -55,7 +135,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
-                        android:layout_weight=".3"
+                        android:layout_weight=".4"
                         android:padding="15dp"
                         android:layout_marginLeft="8dp"
                         android:background="@color/colorGray"
@@ -79,22 +159,22 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
+                        android:layout_weight="1.1"
                         android:padding="15dp"
                         android:gravity="end"
                         android:background="@color/colorGray"
                         >
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
                             app:cardBackgroundColor="@color/baseColor"
                             app:cardCornerRadius="50dp"
                             >
 
                             <androidx.cardview.widget.CardView
-                                android:layout_width="45dp"
-                                android:layout_height="45dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:layout_margin="2.5dp"
                                 app:cardBackgroundColor="@color/colorGray"
                                 app:cardCornerRadius="50dp"
@@ -135,8 +215,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight=".3"
-                    android:padding="15dp"
+                    android:layout_weight=".4"
+                    android:paddingTop="15dp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="10dp"
                     android:layout_marginLeft="8dp"
                     android:background="@color/colorGray"
                     >
@@ -151,7 +233,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="Fill your employment and college details"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/gray"/>
 
                 </LinearLayout>
@@ -159,22 +241,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
+                    android:layout_weight="1.1"
                     android:padding="15dp"
                     android:gravity="end"
                     android:background="@color/colorGray"
                     >
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
                         app:cardBackgroundColor="@color/baseColor"
                         app:cardCornerRadius="50dp"
                         >
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="2.5dp"
                             app:cardBackgroundColor="@color/colorGray"
                             app:cardCornerRadius="50dp"
@@ -213,7 +295,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight=".3"
+                    android:layout_weight=".4"
                     android:padding="15dp"
                     android:layout_marginLeft="8dp"
                     android:background="@color/colorGray"
@@ -237,22 +319,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
+                    android:layout_weight="1.1"
                     android:padding="15dp"
                     android:gravity="end"
                     android:background="@color/colorGray"
                     >
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
                         app:cardBackgroundColor="@color/baseColor"
                         app:cardCornerRadius="50dp"
                         >
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="2.5dp"
                             app:cardBackgroundColor="@color/colorGray"
                             app:cardCornerRadius="50dp"
@@ -291,7 +373,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight=".3"
+                    android:layout_weight=".4"
                     android:padding="15dp"
                     android:layout_marginLeft="8dp"
                     android:background="@color/colorGray"
@@ -315,22 +397,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
+                    android:layout_weight="1.1"
                     android:gravity="end"
                     android:padding="15dp"
                     android:background="@color/colorGray"
                     >
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
                         app:cardBackgroundColor="@color/baseColor"
                         app:cardCornerRadius="50dp"
                         >
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="2.5dp"
                             app:cardBackgroundColor="@color/colorGray"
                             app:cardCornerRadius="50dp"
@@ -369,7 +451,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight=".3"
+                    android:layout_weight=".4"
                     android:padding="15dp"
                     android:layout_marginLeft="8dp"
                     android:background="@color/colorGray"
@@ -393,22 +475,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
+                    android:layout_weight="1.1"
                     android:padding="15dp"
                     android:gravity="end"
                     android:background="@color/colorGray"
                     >
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
                         app:cardBackgroundColor="@color/baseColor"
                         app:cardCornerRadius="50dp"
                         >
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_margin="2.5dp"
                             app:cardBackgroundColor="@color/colorGray"
                             app:cardCornerRadius="50dp"
@@ -417,84 +499,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:id="@+id/percentMV"
-                                android:gravity="center"
-                                android:textColor="@color/baseColor"
-                                android:textSize="20sp"
-                                android:text="0%"
-                                />
-
-
-                        </androidx.cardview.widget.CardView>
-
-
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llWhatsappVerification"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                android:weightSum="1.5"
-                android:background="@drawable/button_bg"
-                >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_weight=".3"
-                    android:padding="15dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@color/colorGray"
-                    >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="WhatsApp Verification"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="Verify WhatsApp no."
-                        android:textSize="16sp"
-                        android:textColor="@color/gray"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
-                    android:gravity="end"
-                    android:padding="15dp"
-                    android:background="@color/colorGray"
-                    >
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        app:cardBackgroundColor="@color/baseColor"
-                        app:cardCornerRadius="50dp"
-                        >
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
-                            android:layout_margin="2.5dp"
-                            app:cardBackgroundColor="@color/colorGray"
-                            app:cardCornerRadius="50dp"
-                            >
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:id="@+id/percentWP"
                                 android:gravity="center"
                                 android:textColor="@color/baseColor"
                                 android:textSize="20sp"
